--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.43
+@version     1.1.44
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -43,11 +43,11 @@ domain("patchdemo.wmflabs.org") {
   display: none;
 }
 
-/* Float the section-header links "[edit] [edit source]" to right, where they're less distracting  */
+/* Float the section-header links "[edit] [edit source]" to right, where they're less distracting
 .mw-editsection {
   float: right;
   padding-top: 5px;
-}
+}  */
 
 /* NAVPOP FIXES */
 /* ------------ */
@@ -402,20 +402,20 @@ font-size: 90% !important;
 } */
 
 /* Shorten the inline links for "edit source" to just "source" */
-.mw-editsection > a:not(.mw-editsection-visualeditor, #ca-addsection, .copysectlink)  {
+.mw-editsection > a:not(.mw-editsection-visualeditor, #ca-addsection, .copysectlink, .copy-section-link-pilcrow)  {
   font-size: 0px;
 }
-.mw-editsection > a:not(.mw-editsection-visualeditor, #ca-addsection, .copysectlink)::after  {
+.mw-editsection > a:not(.mw-editsection-visualeditor, #ca-addsection, .copysectlink, .copy-section-link-pilcrow)::after  {
   content: 'source';
   font-size: 0.9rem;
   visibility: visible;
   color: var(--color-progressive,#36c);
 }
 
-/* Hide the "copy" gadget's first header */
+/* Hide the "copy" gadget's first header
 #firstHeading > .mw-editsection {
   display: none;
-}
+} */
 
 
 /* hide toc hide button */
