--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.46
+@version     1.1.47
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -43,11 +43,11 @@ domain("patchdemo.wmflabs.org") {
   display: none;
 }
 
-/* Float the section-header links "[edit] [edit source]" to right, where they're less distracting
+/* Float the section-header links "[edit] [edit source]" to right, where they're less distracting  */
 .mw-editsection {
   float: right;
   padding-top: 5px;
-}  */
+}
 
 /* NAVPOP FIXES */
 /* ------------ */
@@ -243,7 +243,6 @@ opacity: 0.6;
 #toc-Notes_and_references:not(.vector-toc-level-2),
 #toc-Footnotes:not(.vector-toc-level-2), 
 #toc-Citations:not(.vector-toc-level-2), 
-#toc-Bibliography:not(.vector-toc-level-2), 
 #toc-Sources:not(.vector-toc-level-2), 
 #toc-Further_reading:not(.vector-toc-level-2), 
 #toc-Further_information:not(.vector-toc-level-2),
@@ -258,7 +257,6 @@ opacity: 0.6;
 #toc-Notes_and_references:not(.vector-toc-list-item-active) .vector-toc-link,
 #toc-Footnotes:not(.vector-toc-list-item-active) .vector-toc-link, 
 #toc-Citations:not(.vector-toc-list-item-active) .vector-toc-link, 
-#toc-Bibliography:not(.vector-toc-list-item-active) .vector-toc-link, 
 #toc-Sources:not(.vector-toc-list-item-active) .vector-toc-link, 
 #toc-Further_reading:not(.vector-toc-list-item-active) .vector-toc-link, 
 #toc-Further_information:not(.vector-toc-list-item-active) .vector-toc-link, 
@@ -461,6 +459,13 @@ label .cdx-radio__label  {
 }
 .usage-label-sense{
 opacity: 0.6;
+}
+
+/* diff size fix */
+.diff-context,
+.diff-deletedline,
+.diff-addedline {
+font-size: unset !important;
 }
 
 }
