fix sticky header

--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.53
+@version     1.0.54
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -1178,7 +1178,7 @@ background: unset
 }
 
 /* Fix the patch tommorow */
-@media screen and (max-width: 719px) {
+@media screen {
   .vector-header {
     flex-flow: unset;
   }
