hide the collapsed menu reminders

--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.47
+@version     1.1.48
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -467,5 +467,9 @@ opacity: 0.6;
 .diff-addedline {
 font-size: unset !important;
 }
+
+/* hide the collapsed menu reminders */
+.vector-appearance-landmark > .vector-popup-notification {display: none;}
+.vector-page-tools-landmark > .vector-popup-notification {display: none;}
 
 }
