--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.50
+@version     1.1.51
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -484,5 +484,9 @@ font-size: unset !important;
 .cdx-radio:has(label[for="skin-client-pref-skin-theme-value-os"]) {background:linear-gradient(to right,#eaecf0 70%,black 99%); color: black}
 .cdx-radio:has(label[for="skin-client-pref-skin-theme-value-day"]) {background: #eaecf0; color: black}
 .cdx-radio:has(label[for="skin-client-pref-skin-theme-value-night"]) {background: linear-gradient(to right,#eaecf0 70%,black 71%); color: black}
+
+@media screen {
+  .vector-dropdown .vector-dropdown-content {max-height: 83vh;}
+}
 
 }
