--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.55
+@version     1.1.56
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -477,14 +477,15 @@ font-size: unset !important;
 .vector-page-tools-landmark > .vector-popup-notification {display: none;}
 
 /* Appearance menu enhancements */
-.cdx-radio:has(label[for="skin-client-pref-vector-feature-custom-font-size-value-1"]) {font-size: 130% !important}
-.cdx-radio:has(label[for="skin-client-pref-vector-feature-custom-font-size-value-2"]) {font-size: 160% !important}
+.cdx-radio:has(label[for="skin-client-pref-vector-feature-custom-font-size-value-1"]) {font-size: 120% !important}
+.cdx-radio:has(label[for="skin-client-pref-vector-feature-custom-font-size-value-2"]) {font-size: 140% !important}
+.cdx-radio__label, .cdx-radio__label.cdx-label {line-height: 1.32}
 
 .cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-1"]) label,
 .cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-0"]) label {text-align: center; display: unset;}
 
-.cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-0"]) label:before {content:'← ';}
-.cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-0"]) label:after {content:' →';}
+.cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-0"]) label:before {content:'← ← ';}
+.cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-0"]) label:after {content:' → →';}
 
 .cdx-radio:has(label[for="skin-client-pref-skin-theme-value-os"]) {background:linear-gradient(to right,#eaecf0 80%,black 99%); color: black}
 .cdx-radio:has(label[for="skin-client-pref-skin-theme-value-day"]) {background: #eaecf0; color: black}
