--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.56
+@version     1.1.57
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -482,7 +482,7 @@ font-size: unset !important;
 .cdx-radio__label, .cdx-radio__label.cdx-label {line-height: 1.32}
 
 .cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-1"]) label,
-.cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-0"]) label {text-align: center; display: unset;}
+.cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-0"]) label {display: unset;}
 
 .cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-0"]) label:before {content:'← ← ';}
 .cdx-radio:has(label[for="skin-client-pref-vector-feature-limited-width-value-0"]) label:after {content:' → →';}
