add a wider ToC level on wide-screens

--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.60
+@version     1.0.61
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -564,7 +564,17 @@ padding-top: 40px !important;
 }
 
 /* Reduce the grid gutter, and header height */
-@media screen and ( min-width: 1200px ) {
+@media screen and ( min-width: 1700px ) {
+  .mw-page-container-inner {  
+    grid-template: min-content 1fr min-content / 390px;
+    grid-template-areas: 
+      'siteNotice siteNotice'
+      'columnStart pageContent'
+      'footer footer' ;
+    column-gap: 10px !important;
+  }
+}
+@media screen and ( max-width: 1699px )  and ( min-width: 1200px ) {
   .mw-page-container-inner {  
     grid-template: min-content 1fr min-content / 290px;
     grid-template-areas: 
