--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.62
+@version     1.1.63
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -524,5 +524,8 @@ html.skin-theme-clientpref-os .cdx-radio:has(label[for="skin-client-pref-skin-th
 .ext-wikilambda-app-about-language-block__unavailable {
 	opacity: 0.4
 }
+
+/* hide sidebar "Vector opt-out" main-menu entry - still exists on wikitech */
+.vector-main-menu-action-opt-out {display: none}
 
 }
