--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,8 +1,8 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
-@namespace   StylishThemes
-@version     1.0.63
-@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
+@namespace   https://github.com/quiddity-wp/wikimedia-style-tweaks/
+@version     1.0.64
+@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/new-vector-enhanced.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
 @author      quiddity-wp
@@ -237,7 +237,7 @@ html {
 }
 
 .vector-menu-tabs .mw-list-item.selected a, .vector-menu-tabs .mw-list-item.selected a:visited {
-  border-bottom: 1px solid;
+  border-bottom: 2px solid;
 }
 
 /* Fix for language-variants dropdown */
@@ -959,11 +959,6 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
   border-bottom: unset;
 }
 
-/* Fix sticky table-headers */
-.vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled .mw-sticky-header-element {
-  top: 80px !important;
-}
-
 /* Stop the pinned page-tools menu from jumping on scroll */
 .vector-feature-zebra-design-disabled #vector-page-tools-pinned-container .vector-page-tools {
   padding-top: unset;
@@ -1218,5 +1213,5 @@ background: var(--background-color-base,#f8f9fa);
 /* Just Vector-2022 ender 
 } */
 
-
+/* END */
 }
