--- a/background-override.user.css
+++ b/background-override.user.css
@@ -1,8 +1,8 @@
 /* ==UserStyle==
 @name        WM background reset for screenshots
 @namespace   StylishThemes
-@version     1.0.10
-@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
+@version     1.0.11
+@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/background-override.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/background-override.user.css
 @license     CC-BY-SA-4.0
 @author      quiddity-wp
