--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.67
+@version     1.1.68
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/quiddity.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -53,7 +53,7 @@ domain("patchdemo.wmflabs.org") {
 /* ------------ */
 /* Bigger text */
 .navpopup {
-  font-size: 0.875em; 
+  font-size: 1em; 
   line-height: 140%;
 }
 .popup_menu {
@@ -528,13 +528,13 @@ html.skin-theme-clientpref-os .cdx-radio:has(label[for="skin-client-pref-skin-th
 /* hide sidebar "Vector opt-out" main-menu entry - still exists on wikitech */
 .vector-main-menu-action-opt-out {display: none}
 
-/* test moving the page-title from under my new stickyheadertext-anchor */
+/* test moving the page-title from under my new stickyheadertext-anchor 
 @media screen and (min-width: 1120px) {
   .vector-sticky-header-context-bar-primary {
     position: absolute;
     top:46px;
-    left:450px;
+    left:360px;
   }
-}
+}*/
 
 }
