--- a/diff-color.user.css
+++ b/diff-color.user.css
@@ -1,9 +1,9 @@
 /* ==UserStyle==
-@name        Wikim quiddity's tweaks
+@name        Wikim diff color 
 @namespace   StylishThemes
-@version     1.1.68
-@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/quiddity.user.css
-@updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
+@version     1.1.2
+@homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color.user.css
+@updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color.user.css
 @license     CC-BY-SA-4.0
 @author      quiddity-wp
 ==/UserStyle== */
