--- a/shorter-tab-names.user.css
+++ b/shorter-tab-names.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
-@name        Wikim shorter-tab-names 
+@name        WM shorter-tab-names 
 @namespace   StylishThemes
-@version     1.1.1
+@version     1.1.2
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/shorter-tab-names.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/shorter-tab-names.user.css
 @license     CC-BY-SA-4.0
