--- a/diff-color.user.css
+++ b/diff-color.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM diff color 
 @namespace   StylishThemes
-@version     1.1.4
+@version     1.1.5
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color.user.css
 @license     CC-BY-SA-4.0
@@ -42,16 +42,7 @@ domain("patchdemo.wmflabs.org") {
     --border-color-content-removed: #fea898;
     --border-color-content-changed: #b0c1f0;
 }
-.skin-theme-clientpref-night:root {
-    --color-content-added: #2cb491;
-    --color-content-removed: #fd7865;
-    --background-color-content-added: #196551;
-    --background-color-content-removed: #9f3526;
-    --background-color-content-changed: #3056a9;
-    --border-color-content-added: #196551;
-    --border-color-content-removed: #9f3526;
-    --border-color-content-changed: #3056a9;
-}
+.skin-theme-clientpref-night:root,
 .skin-theme-clientpref-os:root {
     --color-content-added: #2cb491;
     --color-content-removed: #fd7865;
