--- a/diff-color.user.css
+++ b/diff-color.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM diff color 
 @namespace   StylishThemes
-@version     1.1.5
+@version     1.1.6
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color.user.css
 @license     CC-BY-SA-4.0
@@ -78,5 +78,9 @@ html.skin-theme-clientpref-night del.popupDiff {
   }
 }
 
+/* Visualdiff clarifier */
+[data-diff-action="insert"] > *, [data-diff-action="remove"] > *, [data-diff-action="change"] > *, [data-diff-action="change-insert"] > *, [data-diff-action="change-remove"] > *, [data-diff-move] > * {
+  mix-blend-mode: unset;
+}
 
 }
