--- a/diff-color.user.css
+++ b/diff-color.user.css
@@ -66,24 +66,25 @@ domain("patchdemo.wmflabs.org") {
 }
 
 /* NavPopups fixes */
+/* Light mode */
 ins.popupDiff {
   background: #80cdb3; /* default: #afe */
 }
 del.popupDiff {
   background: #fea898; /* default: #afe */
 }
+/* Dark mode */
 html.skin-theme-clientpref-night ins.popupDiff {
   background: #196551; /* default: #026c5f */
 }
 html.skin-theme-clientpref-night del.popupDiff {
   background: #9f3526; /* default: #89474b */
 }
+/* Automatic-dark mode */
 @media (prefers-color-scheme: dark) {
   html.skin-theme-clientpref-os ins.popupDiff {
     background: #196551; /* default: #026c5f */
   }
-}
-@media (prefers-color-scheme: dark) {
   html.skin-theme-clientpref-os del.popupDiff {
     background: #9f3526; /* default: #89474b */
   }
@@ -93,11 +94,31 @@ html.skin-theme-clientpref-night del.popupDiff {
 [data-diff-action="insert"] > *, [data-diff-action="remove"] > *, [data-diff-action="change"] > *, [data-diff-action="change-insert"] > *, [data-diff-action="change-remove"] > *, [data-diff-move] > * {
   mix-blend-mode: unset;
 }
-/* Less obtrusive "newline" messages */
+
+/* Visualdiff - Less obtrusive "newline" messages */
 .mw-diff-empty-line {opacity: 50%;}
 
-/* Less obtrusive contextual lines surrounding the actual diff */
+/* Wikitext diffs - Less obtrusive contextual lines surrounding the actual diff */
 .diff-context, 
 .mw-diff-inline-context {opacity: 50%;}
+
+/* Fix Visualdiffs sidebar color to match */
+.ve-ui-diffElement-attributeChange {color: unset !important}
+/* Dark mode fixes */
+html.skin-theme-clientpref-night .ve-ui-diffElement-attributeChange ins {
+  background: #196551; /* default: #026c5f */
+}
+html.skin-theme-clientpref-night .ve-ui-diffElement-attributeChange del {
+  background: #9f3526; /* default: #89474b */
+}
+@media (prefers-color-scheme: dark) {
+  html.skin-theme-clientpref-os .ve-ui-diffElement-attributeChange ins {
+    background: #196551; /* default: #026c5f */
+  }
+  html.skin-theme-clientpref-os .ve-ui-diffElement-attributeChange del {
+    background: #9f3526; /* default: #89474b */
+  }
+}
+
 
 }
