--- a/diff-color.user.css
+++ b/diff-color.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM diff color 
 @namespace   StylishThemes
-@version     1.1.10
+@version     1.1.11
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color.user.css
 @license     CC-BY-SA-4.0
@@ -102,8 +102,8 @@ html.skin-theme-clientpref-night del.popupDiff {
 .diff-context, 
 .mw-diff-inline-context {opacity: 50%;}
 
-/* Fix Visualdiffs sidebar color to match */
-.ve-ui-diffElement-attributeChange {color: unset !important}
+/* Fix Visualdiffs sidebar color to match and make more visible */
+.ve-ui-diffElement-attributeChange {color: unset !important; opacity: 0.9}
 /* Dark mode fixes */
 html.skin-theme-clientpref-night .ve-ui-diffElement-attributeChange ins {
   background: #196551; /* default: #026c5f */
