--- a/diff-color2.user.css
+++ b/diff-color2.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM diff color2 
 @namespace   StylishThemes
-@version     1.1.5
+@version     1.1.6
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color2.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color2.user.css
 @license     CC-BY-SA-4.0
@@ -117,7 +117,7 @@ html.skin-theme-clientpref-night del.popupDiff {
 .diff-context, 
 .mw-diff-inline-context {opacity: 50%;}
 
-/* Fix Visualdiffs sidebar color to be more visible */
-.ve-ui-diffElement-attributeChange {color: unset !important}
+/* Fix Visualdiffs sidebar colors to be more visible */
+.ve-ui-diffElement-attributeChange {color: unset !important; opacity: 0.9}
 
 }
