--- a/diff-color2.user.css
+++ b/diff-color2.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        WM diff color2 
 @namespace   StylishThemes
-@version     1.1.7
+@version     1.1.8
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/diff-color2.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/diff-color2.user.css
 @license     CC-BY-SA-4.0
@@ -88,11 +88,13 @@ html.skin-theme-clientpref-night del.popupDiff {
 /* Light mode */
 [data-diff-action="insert"],
 .ve-ui-diffElement-attributeChange ins {
-  background-color: var(--background-color-content-added) !important
+  background-color: var(--background-color-content-added) !important;
+  box-shadow: 0 0 0 1px #233566 !important;
 }
 [data-diff-action="remove"],
 .ve-ui-diffElement-attributeChange del {
-  background-color: var(--background-color-content-removed) !important
+  background-color: var(--background-color-content-removed) !important;
+  box-shadow: 0 0 0 1px #453217 !important;
 }
 [data-diff-action="change"], 
 [data-diff-action="change-insert"] {
