tweak name to realphabetize

--- a/background-override.user.css
+++ b/background-override.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
-@name        WM background reset for screenshots
+@name        WM reset background colors for screenshots
 @namespace   StylishThemes
-@version     1.0.12
+@version     1.0.13
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/background-override.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/background-override.user.css
 @license     CC-BY-SA-4.0
